--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 h1 {
-  font-family: monospace;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 37px;
 }
 h2 {
